получаем от сервера данные профиля и карточек

--- a/src/blocks/elements/__img/elements__img.css
+++ b/src/blocks/elements/__img/elements__img.css
@@ -4,8 +4,9 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     object-fit: cover;
-    display: block;
     cursor: pointer;
     background: black;
     color: white;
+    background-size: cover;
+    display: block;
 }
