--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,14 +1,13 @@
 .profile__avatar{
     border-radius: 50%;
     cursor: pointer;
-    display: block;
     grid-area: 1/1/3/1;
     max-width: 120px;
     height: 120px;
     position: relative;
     transition: all .4s ease;
     width: 100%;
-    object-fit: cover;
+    background-size: cover;
 }
 @media screen and (max-width: 1023px) {
     .profile__avatar{
